# tradeing-strategy-pack

./: .gitignore  CODEX.md  README.md  RELEASE.md  pyproject.toml
.github/workflows/: ci.yml
strategy_pack/: __init__.py
strategy_pack/strategies/: __init__.py  my_strategy.py
strategy_pack/strategies/legacy/: __init__.py  five_minute_breakout.py  five_minute_impulse.py  five_minute_momentum.py  five_minute_momentum_12pct.py  five_minute_regime.py  five_minute_reversion.py  one_minute_trend_scalp.py  sample_strategy.py
tests/: test_legacy_strategies.py  test_my_strategy.py
