[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strategy-pack"
version = "0.1.0"
description = "External strategy pack for the trading engine"
requires-python = ">=3.11"
dependencies = [
    "trading-sdk>=0.1,<0.2",
    "numpy>=1.26",
    "pandas>=2.2",
]

[project.entry-points."trading_system.strategies"]
my_strategy = "strategy_pack.strategies.my_strategy:MyStrategy"
legacy_sample = "strategy_pack.strategies.legacy.sample_strategy:SampleStrategy"
legacy_5m_momentum = "strategy_pack.strategies.legacy.five_minute_momentum:FiveMinuteMomentumStrategy"
legacy_5m_reversion = "strategy_pack.strategies.legacy.five_minute_reversion:FiveMinuteReversionStrategy"

[tool.setuptools.packages.find]
where = ["."]
include = ["strategy_pack*"]
